--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     shared_preferences: ^2.0.5
     http: ^0.13.1
     url_launcher: ^6.0.3
+    flutter_inappwebview: ^5.3.2
 
 dev_dependencies:
     flutter_test:
