revamped login system and dashboard with custom bottom nav bar

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.asw_scanner">
+    package="com.asw.scanner">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="asw_scanner"
+        android:label="ASW Scanner"
         android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
         <activity
