--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
     http: ^0.13.1
     url_launcher: ^6.0.3
     flutter_inappwebview: ^5.3.2
+    intl: ^0.17.0
+    flutter_icons: ^1.1.0
+    icon_shadow: ^1.0.1
 
 dev_dependencies:
     flutter_test:
@@ -45,7 +48,7 @@ flutter_icons:
     android: true
     ios: true
     image_path: "assets/favicon.png"
-    adaptive_icon_background: "#000000"
+    adaptive_icon_background: "#fff"
 
 # The following section is specific to Flutter.
 flutter:
