--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     flutter_icons: ^1.1.0
     icon_shadow: ^1.0.1
     qr_code_scanner: ^0.4.0
+    dio: ^4.0.0
 
 dev_dependencies:
     flutter_test:
