--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     icon_shadow: ^1.0.1
     qr_code_scanner: ^0.4.0
     dio: ^4.0.0
+    fluttertoast: ^8.0.6
 
 dev_dependencies:
     flutter_test:
