--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
     qr_code_scanner: ^0.4.0
     dio: ^4.0.0
     fluttertoast: ^8.0.6
+    connectivity: ^3.0.3
 
 dev_dependencies:
     flutter_test:
